Changes undone in index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <header class="masthead fade-in-up" style="background: url(&quot;assets/img/57c8cbd07d116.image.jpg&quot;) center / cover no-repeat;  background-color: #ceedff; animation-delay: 0s;">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in hidden fade-in-up" style="animation-delay: 1s;"><span style="color: var(--bs-danger-text-emphasis);">Welcome To Iron Oilfield!</span></div>
+                <div class="intro-lead-in hidden fade-in-up" style="animation-delay: 1s;"><span style="color: var(--bs-danger);">Welcome To Iron Oilfield!</span></div>
                 <div class="intro-heading text-uppercase hidden fade-in-down" style="animation-delay: 2s;"><span>We get the job done, safely and efficiently.</span></div><a class="btn btn-primary btn-xl text-uppercase fade-in-down" role="button" href="#services" style="color: var(--bs-secondary-bg);background: var(--bs-danger);border-color: var(--bs-danger); animation-delay: 2.5s;">Tell mE more</a>
             </div>
         </div>
