--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/bs-theme-overrides.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="stylesheet" href="assets/css/aos.min.css">
     <link rel="stylesheet" href="assets/css/fade-in.css">
 </head>
 
@@ -34,12 +35,12 @@
     <header class="masthead fade-in-up" style="background: url(&quot;assets/img/57c8cbd07d116.image.jpg&quot;) center / cover no-repeat;  background-color: #ceedff; animation-delay: 0s;">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in hidden fade-in-up" style="animation-delay: 1s;"><span style="color: var(--bs-danger);">Welcome To Iron Oilfield!</span></div>
-                <div class="intro-heading text-uppercase hidden fade-in-down" style="animation-delay: 2s;"><span>We get the job done, safely and efficiently.</span></div><a class="btn btn-primary btn-xl text-uppercase fade-in-down" role="button" href="#services" style="color: var(--bs-secondary-bg);background: var(--bs-danger);border-color: var(--bs-danger); animation-delay: 2.5s;">Tell mE more</a>
+                <div class="intro-lead-in fade-in-up" style="animation-delay: 1s;"><span style="color: var(--bs-danger);">Welcome To Iron Oilfield!</span></div>
+                <div class="intro-heading text-uppercase fade-in-down" style="animation-delay: 2s;"><span>We get the job done, safely and efficiently.</span></div><a class="btn btn-primary btn-xl text-uppercase fade-in-down" role="button" href="#services" style="color: var(--bs-secondary-bg);background: var(--bs-danger);border-color: var(--bs-danger); animation-delay: 2.5s;">Tell mE more</a>
             </div>
         </div>
     </header>
-    <section id="services">
+    <section data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -48,7 +49,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" class="fa-stack-1x fa-inverse" style="color: var(--bs-body-bg);position: relative;display: inline;font-size: 81px;">
+                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" class="fa-stack-1x fa-inverse" style="color: var(--bs-body-bg);position: relative;display: inline;font-size: 81px;">
                             <g>
                                 <rect fill="none" height="24" width="24"></rect>
                             </g>
@@ -59,18 +60,18 @@
                     <h4 class="section-heading">Pipeline Reclamation</h4>
                     <p class="text-muted">Our pipeline reclamation services help to restore land damaged by pipeline construction. We work closely with our clients and environmental agencies to ensure that all regulations are followed strictly and that land is restored to its former condition.</p>
                 </div>
-                <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-building fa-stack-1x fa-inverse" style="position: relative;"></i></span>
+                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-delay="600"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-building fa-stack-1x fa-inverse" style="position: relative;"></i></span>
                     <h4 class="section-heading">Building Leases</h4>
                     <p class="text-muted">We offer construction of high-quality building leases for a variety of applications. Our buildings are designed to be highly functional and energy-efficient, saving our clients money in the long run.</p>
                 </div>
-                <div class="col-md-4"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-road fa-stack-1x fa-inverse" style="position: relative;"></i></span>
+                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-delay="900"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-road fa-stack-1x fa-inverse" style="position: relative;"></i></span>
                     <h4 class="section-heading">Access Road</h4>
                     <p class="text-muted">We construct access roads for a range of industry needs, from mining to oil and gas extraction. Our access roads are designed to be highly durable and can withstand heavy loads.</p>
                 </div>
             </div>
         </div>
     </section>
-    <section class="bg-light" id="portfolio">
+    <section class="bg-light" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -79,7 +80,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" href="#portfolioModal1" data-bs-toggle="modal">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                    <a class="portfolio-link" href="#portfolioModal1" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
                             <div class="portfolio-hover">
@@ -92,7 +94,8 @@
                         <p class="text-muted">Illustration</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" href="#portfolioModal2" data-bs-toggle="modal">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
+                    <a class="portfolio-link" href="#portfolioModal2" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
                             <div class="portfolio-hover">
@@ -105,7 +108,8 @@
                         <p class="text-muted">Graphic Design</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" href="#portfolioModal3" data-bs-toggle="modal">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="600">
+                    <a class="portfolio-link" href="#portfolioModal3" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
                         </div><img class="img-fluid" src="assets/img/portfolio/3-thumbnail.jpg">
@@ -115,7 +119,8 @@
                         <p class="text-muted">Identity</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" href="#portfolioModal4" data-bs-toggle="modal">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                    <a class="portfolio-link" href="#portfolioModal4" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
                         </div><img class="img-fluid" src="assets/img/portfolio/4-thumbnail.jpg">
@@ -125,7 +130,8 @@
                         <p class="text-muted">Branding</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" href="#portfolioModal5" data-bs-toggle="modal">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
+                    <a class="portfolio-link" href="#portfolioModal5" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
                         </div><img class="img-fluid" src="assets/img/portfolio/5-thumbnail.jpg">
@@ -135,7 +141,8 @@
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item"><a class="portfolio-link" href="#portfolioModal6" data-bs-toggle="modal">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="600">
+                    <a class="portfolio-link" href="#portfolioModal6" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
                         </div><img class="img-fluid" src="assets/img/portfolio/6-thumbnail.jpg">
@@ -148,7 +155,7 @@
             </div>
         </div>
     </section>
-    <section id="about">
+    <section data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -160,8 +167,8 @@
                 <div class="col-lg-12">
                     <ul class="list-group timeline">
                         <li class="list-group-item">
-                            <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"></div>
-                            <div class="timeline-panel">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-left" data-aos-duration="500" data-aos-delay="1000">
                                 <div class="timeline-heading">
                                     <h4>2009-2011</h4>
                                     <h4 class="subheading">Our Humble Beginnings</h4>
@@ -172,8 +179,8 @@
                             </div>
                         </li>
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg"></div>
-                            <div class="timeline-panel">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="1500"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-right" data-aos-duration="500" data-aos-delay="2000">
                                 <div class="timeline-heading">
                                     <h4>March 2011</h4>
                                     <h4 class="subheading">An Agency is Born</h4>
@@ -184,8 +191,8 @@
                             </div>
                         </li>
                         <li class="list-group-item">
-                            <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg"></div>
-                            <div class="timeline-panel">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="2500"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-left" data-aos-duration="500" data-aos-delay="3000">
                                 <div class="timeline-heading">
                                     <h4>December 2012</h4>
                                     <h4 class="subheading">Transition to Full Service</h4>
@@ -196,8 +203,8 @@
                             </div>
                         </li>
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg"></div>
-                            <div class="timeline-panel">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="3500"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-right" data-aos-duration="500" data-aos-delay="4000">
                                 <div class="timeline-heading">
                                     <h4>July 2014</h4>
                                     <h4 class="subheading">Phase Two Expansion</h4>
@@ -208,7 +215,7 @@
                             </div>
                         </li>
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image" style="background: var(--bs-danger);">
+                            <div class="timeline-image" style="background: var(--bs-danger);" data-aos="fade-down" data-aos-duration="500" data-aos-delay="4500">
                                 <h4 style="color: #efefef;">Be Part<br>&nbsp;Of Our<br>&nbsp;Story!</h4>
                             </div>
                         </li>
@@ -217,7 +224,7 @@
             </div>
         </div>
     </section>
-    <section id="contact" style="background: url(&quot;assets/img/1000005601-id-13873931-5f63-4532-811d-837b52c9191b%20(1)-PhotoRoom.jpeg&quot;) center / cover no-repeat;backdrop-filter: blur(0px);">
+    <section data-aos="fade-up" data-aos-delay="500ms" data-aos-duration="1000" id="contact" style="background: url(&quot;assets/img/1000005601-id-13873931-5f63-4532-811d-837b52c9191b%20(1)-PhotoRoom.jpeg&quot;) center / cover no-repeat;backdrop-filter: blur(0px);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -400,7 +407,8 @@
         </div>
     </div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/aos.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/agency.js"></script>
 </body>
-
 </html>
