--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </header>
-    <section data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" id="services">
+    <section data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="300" id="services">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -71,7 +71,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-light" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" id="portfolio">
+    <section class="bg-light" data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500" id="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="400" data-aos-delay="200">
                     <a class="portfolio-link" href="#portfolioModal1" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
@@ -94,7 +94,7 @@
                         <p class="text-muted">Illustration</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="400" data-aos-delay="400">
                     <a class="portfolio-link" href="#portfolioModal2" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
@@ -108,7 +108,7 @@
                         <p class="text-muted">Graphic Design</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="600">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="400" data-aos-delay="600">
                     <a class="portfolio-link" href="#portfolioModal3" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
@@ -119,7 +119,7 @@
                         <p class="text-muted">Identity</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="200">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="400" data-aos-delay="200">
                     <a class="portfolio-link" href="#portfolioModal4" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
@@ -130,7 +130,7 @@
                         <p class="text-muted">Branding</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="400">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="400" data-aos-delay="400">
                     <a class="portfolio-link" href="#portfolioModal5" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
@@ -141,7 +141,7 @@
                         <p class="text-muted">Website Design</p>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-duration="400" data-aos-delay="600">
+                <div class="col-sm-6 col-md-4 portfolio-item" data-aos="fade-up" data-aos-once="true" data-aos-duration="400" data-aos-delay="600">
                     <a class="portfolio-link" href="#portfolioModal6" data-bs-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content"><i class="fa fa-plus fa-3x"></i></div>
@@ -155,7 +155,7 @@
             </div>
         </div>
     </section>
-    <section data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" id="about">
+    <section data-aos="fade-up" data-aos-duration="1000" data-aos-once="true" data-aos-delay="500" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -167,8 +167,8 @@
                 <div class="col-lg-12">
                     <ul class="list-group timeline">
                         <li class="list-group-item">
-                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"></div>
-                            <div class="timeline-panel" data-aos="fade-left" data-aos-duration="500" data-aos-delay="1000">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-once="true" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/1.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-left" data-aos-once="true" data-aos-duration="500" data-aos-delay="1000">
                                 <div class="timeline-heading">
                                     <h4>2009-2011</h4>
                                     <h4 class="subheading">Our Humble Beginnings</h4>
@@ -179,8 +179,8 @@
                             </div>
                         </li>
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg"></div>
-                            <div class="timeline-panel" data-aos="fade-right" data-aos-duration="500" data-aos-delay="1000">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-once="true" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/2.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-right" data-aos-once="true" data-aos-duration="500" data-aos-delay="1000">
                                 <div class="timeline-heading">
                                     <h4>March 2011</h4>
                                     <h4 class="subheading">An Agency is Born</h4>
@@ -191,8 +191,8 @@
                             </div>
                         </li>
                         <li class="list-group-item">
-                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg"></div>
-                            <div class="timeline-panel" data-aos="fade-left" data-aos-duration="500" data-aos-delay="1000">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-once="true" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/3.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-left" data-aos-once="true" data-aos-duration="500" data-aos-delay="1000">
                                 <div class="timeline-heading">
                                     <h4>December 2012</h4>
                                     <h4 class="subheading">Transition to Full Service</h4>
@@ -203,8 +203,8 @@
                             </div>
                         </li>
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image" data-aos="fade-down" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg"></div>
-                            <div class="timeline-panel" data-aos="fade-right" data-aos-duration="500" data-aos-delay="1000">
+                            <div class="timeline-image" data-aos="fade-down" data-aos-once="true" data-aos-duration="500" data-aos-delay="500"><img class="rounded-circle img-fluid" src="assets/img/about/4.jpg"></div>
+                            <div class="timeline-panel" data-aos="fade-right" data-aos-once="true" data-aos-duration="500" data-aos-delay="1000">
                                 <div class="timeline-heading">
                                     <h4>July 2014</h4>
                                     <h4 class="subheading">Phase Two Expansion</h4>
@@ -215,7 +215,7 @@
                             </div>
                         </li>
                         <li class="list-group-item timeline-inverted">
-                            <div class="timeline-image" style="background: var(--bs-danger);" data-aos="fade-down" data-aos-duration="500" data-aos-delay="500">
+                            <div class="timeline-image" style="background: var(--bs-danger);" data-aos="fade-down" data-aos-once="true" data-aos-duration="500" data-aos-delay="500">
                                 <h4 style="color: #efefef;">Be Part<br>&nbsp;Of Our<br>&nbsp;Story!</h4>
                             </div>
                         </li>
@@ -224,7 +224,7 @@
             </div>
         </div>
     </section>
-    <section data-aos="fade-up" data-aos-delay="500ms" data-aos-duration="1000" id="contact" style="background: url(&quot;assets/img/1000005601-id-13873931-5f63-4532-811d-837b52c9191b%20(1)-PhotoRoom.jpeg&quot;) center / cover no-repeat;backdrop-filter: blur(0px);">
+    <section data-aos="fade-up" data-aos-delay="500ms" data-aos-once="true" data-aos-duration="1000" id="contact" style="background: url(&quot;assets/img/1000005601-id-13873931-5f63-4532-811d-837b52c9191b%20(1)-PhotoRoom.jpeg&quot;) center / cover no-repeat;backdrop-filter: blur(0px);">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
