--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-delay="300"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" class="fa-stack-1x fa-inverse" style="color: var(--bs-body-bg);position: relative;display: inline;font-size: 81px;">
+                <div class="col-md-4" data-aos="fade-right" data-aos-once="true" data-aos-duration="300" data-aos-delay="300"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" height="1em" viewBox="0 0 24 24" width="1em" fill="currentColor" class="fa-stack-1x fa-inverse" style="color: var(--bs-body-bg);position: relative;display: inline;font-size: 81px;">
                             <g>
                                 <rect fill="none" height="24" width="24"></rect>
                             </g>
@@ -60,11 +60,11 @@
                     <h4 class="section-heading">Pipeline Reclamation</h4>
                     <p class="text-muted">Our pipeline reclamation services help to restore land damaged by pipeline construction. We work closely with our clients and environmental agencies to ensure that all regulations are followed strictly and that land is restored to its former condition.</p>
                 </div>
-                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-delay="600"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-building fa-stack-1x fa-inverse" style="position: relative;"></i></span>
+                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-once="true" data-aos-delay="600"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-building fa-stack-1x fa-inverse" style="position: relative;"></i></span>
                     <h4 class="section-heading">Building Leases</h4>
                     <p class="text-muted">We offer construction of high-quality building leases for a variety of applications. Our buildings are designed to be highly functional and energy-efficient, saving our clients money in the long run.</p>
                 </div>
-                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-delay="900"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-road fa-stack-1x fa-inverse" style="position: relative;"></i></span>
+                <div class="col-md-4" data-aos="fade-right" data-aos-duration="300" data-aos-once="true" data-aos-delay="900"><span class="fa-stack fa-4x"><i class="fa fa-circle fa-stack-2x text-primary"></i><i class="fas fa-road fa-stack-1x fa-inverse" style="position: relative;"></i></span>
                     <h4 class="section-heading">Access Road</h4>
                     <p class="text-muted">We construct access roads for a range of industry needs, from mining to oil and gas extraction. Our access roads are designed to be highly durable and can withstand heavy loads.</p>
                 </div>
